# VICA-NeRF

./: .gitignore  MANIFEST.in  README.md  _config.yml  index.html  pyproject.toml
vica/: ip2p.py  vica.py  vica_config.py  vica_pipeline.py  vica_trainer.py  vica_utils.py
vica/data/: vica_datamanager.py
